--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,110 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-10 offset-md-1">
+        <!-- form complex example -->
+        <div class="card card-outline-secondary">
+          <div class="card-header">
+            <h3 class="mb-0">Payment form example</h3>
+          </div>
+          <div class="card-body">
+            <div id="error-msg" class="alert alert-danger">Some fields are missing</div>
+            <form  method="post" action="#">
+              <div class="row mt-4">
+              <div class="col-sm-5 pb-3">
+                <label for="exampleAccount">Card #</label> 
+                <input class="form-control" id="card" placeholder="XXXXXXXXXXXXXXXX" type="text">
+              </div>
+              <div class="col-sm-3 pb-3">
+                <label for="exampleCtrl">CVC #</label> 
+                <input class="form-control" id="cvc" placeholder="0000" type="text">
+              </div>
+              <div class="col-sm-4 pb-3">
+                <label for="exampleAmount">Amount</label>
+                <div class="input-group">
+                  <div class="input-group-addon">
+                    <i class="fas fa-dollar-sign"></i>
+                  </div>
+                  <input class="form-control" id="exampleAmount" placeholder="Amount" type="number">
+                </div>
+              </div>
+              <div class="col-sm-6 pb-3">
+                <label for="exampleFirst">First Name</label> 
+                <input class="form-control" id="exampleFirst" type="text">
+              </div>
+              <div class="col-sm-6 pb-3">
+                <label for="exampleLast">Last Name</label> 
+                <input class="form-control" id="exampleLast" type="text">
+              </div>
+              <div class="col-sm-6 pb-3">
+                <label for="exampleCity">City</label> <input class="form-control" id="exampleCity" type="text">
+              </div>
+              <div class="col-sm-3 pb-3">
+                <label for="exampleSt">State</label> <select class="form-control custom-select" id="exampleSt">
+                <option class="text-white bg-warning">
+                  Pick a state
+                </option>
+                <option value="AR">
+                  Arkansas
+                </option>
+                <option value="CA">
+                  California
+                </option>
+                <option value="NC">
+                  North Carolina
+                </option>
+                <option value="OH">
+                  Ohio
+                </option>
+                </select>
+              </div>
+              <div class="col-sm-3 pb-3">
+                <label for="exampleZip">Postal Code</label> 
+                <input class="form-control" id="exampleZip" type="text">
+              </div>
+              <div class="col-md-6 pb-3">
+                <p for="exampleAccount">We accept:</p>
+                <div class="btn-group" data-toggle="buttons">
+                  <label class="btn btn-secondary">
+                    <input autocomplete="off" checked id="blue" name="options" type="radio">
+                    <i class="fab fa-cc-mastercard"></i>
+                  </label> 
+                  <label class="btn btn-secondary">
+                    <input autocomplete="off" id="red" name="options" type="radio">
+                    <i class="fab fa-cc-visa"></i>
+                  </label> 
+                  <label class="btn btn-secondary">
+                    <input autocomplete="off" id="green" name="options" type="radio">
+                    <i class="fab fa-cc-diners-club"></i>
+                  </label> 
+                  <label class="btn btn-secondary">
+                    <input autocomplete="off" id="yellow" name="options" type="radio">
+                    <i class="fab fa-cc-amex"></i>
+                  </label> 
+                </div>
+              </div>
+              <div class="col-md-6 pb-3">
+                <label for="exampleMessage">Message</label> 
+                <textarea class="form-control" id="complexExampleMessage" rows="3"></textarea> 
+                <small class="text-muted">Add any notes here.</small>
+              </div>
+            </div>
+            </form>
+          </div>
+          <div class="card-footer">
+            <div class="float-right">
+              <button class="btn btn-secondary" type="reset">Cancel</button> 
+              <button id="sendForm" class="btn btn-primary" type="button" />Send</button>
+            </div>
+          </div>
+        </div><!--/card-->
       </div>
-    </div>
-
+    </div><!--/row-->
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
   </body>
