--- a/src/index.html
+++ b/src/index.html
@@ -42,22 +42,22 @@
                   <div class="input-group-addon">
                     <i class="fas fa-dollar-sign"></i>
                   </div>
-                  <input class="form-control" id="exampleAmount" placeholder="Amount" type="number">
+                  <input class="form-control" id="amount" placeholder="Amount" type="number">
                 </div>
               </div>
               <div class="col-sm-6 pb-3">
                 <label for="exampleFirst">First Name</label> 
-                <input class="form-control" id="exampleFirst" type="text">
+                <input class="form-control" id="Nombre" type="text">
               </div>
               <div class="col-sm-6 pb-3">
                 <label for="exampleLast">Last Name</label> 
-                <input class="form-control" id="exampleLast" type="text">
+                <input class="form-control" id="apellido" type="text">
               </div>
               <div class="col-sm-6 pb-3">
-                <label for="exampleCity">City</label> <input class="form-control" id="exampleCity" type="text">
+                <label for="exampleCity">City</label> <input class="form-control" id="city" type="text">
               </div>
               <div class="col-sm-3 pb-3">
-                <label for="exampleSt">State</label> <select class="form-control custom-select" id="exampleSt">
+                <label for="exampleSt">State</label> <select class="form-control custom-select" id="state">
                 <option class="text-white bg-warning">
                   Pick a state
                 </option>
@@ -77,7 +77,7 @@
               </div>
               <div class="col-sm-3 pb-3">
                 <label for="exampleZip">Postal Code</label> 
-                <input class="form-control" id="exampleZip" type="text">
+                <input class="form-control" id="zip" type="text">
               </div>
               <div class="col-md-6 pb-3">
                 <p for="exampleAccount">We accept:</p>
