--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,11 @@
               <div class="row mt-4">
               <div class="col-sm-5 pb-3">
                 <label for="exampleAccount">Card #</label> 
-                <input class="form-control" id="card" placeholder="XXXXXXXXXXXXXXXX" type="text">
+                <input class="form-control" id="card" placeholder="XXXXXXXXXXXXXXXX" type="number">
               </div>
               <div class="col-sm-3 pb-3">
                 <label for="exampleCtrl">CVC #</label> 
-                <input class="form-control" id="cvc" placeholder="0000" type="text">
+                <input class="form-control" id="cvc" placeholder="0000" type="number">
               </div>
               <div class="col-sm-4 pb-3">
                 <label for="exampleAmount">Amount</label>
@@ -47,7 +47,7 @@
               </div>
               <div class="col-sm-6 pb-3">
                 <label for="exampleFirst">First Name</label> 
-                <input class="form-control" id="Nombre" type="text">
+                <input class="form-control" id="nombre" type="text">
               </div>
               <div class="col-sm-6 pb-3">
                 <label for="exampleLast">Last Name</label> 
@@ -77,7 +77,7 @@
               </div>
               <div class="col-sm-3 pb-3">
                 <label for="exampleZip">Postal Code</label> 
-                <input class="form-control" id="zip" type="text">
+                <input class="form-control" id="zip" type="number">
               </div>
               <div class="col-md-6 pb-3">
                 <p for="exampleAccount">We accept:</p>
